--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../lectures/00_intro.html" class="active">introduction</a></li><li class="chapter-item expanded affix "><a href="../lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="../lectures/02_scrum.html">scrum</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../lectures/HOME.html">home</a></li><li class="chapter-item expanded affix "><a href="../lectures/00_intro.html" class="active">introduction</a></li><li class="chapter-item expanded affix "><a href="../lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="../lectures/02_scrum.html">scrum</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -807,6 +807,9 @@ Interactions</a></li>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../lectures/HOME.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
                             <a rel="next prefetch" href="../lectures/01_sdlc.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
@@ -818,6 +821,9 @@ Interactions</a></li>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../lectures/HOME.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
                     <a rel="next prefetch" href="../lectures/01_sdlc.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
