--- a/print.html
+++ b/print.html
@@ -92,7 +92,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="lectures/02_scrum.html">scrum</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="lectures/HOME.html">home</a></li><li class="chapter-item expanded affix "><a href="lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="lectures/02_scrum.html">scrum</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -177,7 +177,34 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
+                        <h1 id="software-engineering"><a class="header" href="#software-engineering">Software Engineering</a></h1>
+<h2 id="presentations"><a class="header" href="#presentations">Presentations</a></h2>
+<!--| week | lecture                           | practical class    |
+|-----:|:---------------------------------:|:------------------:|
+|    1 | intro, software architecture      | SDLC               |
+|    2 | SCRUM                             | kanban             |
+|    3 | requirement analysis              | user story map     |
+|    4 | UML, C4                           | UML in practice    |
+|    5 | "communication", clean code       | case studies       |
+|    6 | legacy code, review               | "coding" example   |
+|    7 | testing, review                   | project assignment |
+|    8 | school holiday                    |                    |
+|    9 | dependency management             | VCS basics         |
+|   10 | CI, automatization, devops        | project workshop   |
+|   11 | project workshop                  | project workshop   |
+|   12 | summary, course feedback          | project workshop   |
+|   13 | midterm                           | project demo       |-->
+<h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
+<ol>
+<li><a href="lectures/slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="lectures/slides/01_sdlc.html">software development life cycles</a></li>
+</ol>
+<h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
+<ol>
+<li><a href="lectures/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="lectures/slides/02_srcum.html">scrum</a></li>
+</ol>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
 <col style="width: 8%" />
