deploy: 35af820b42939a5b3b25b19dad11b55caa078768

--- a/lectures/02_scrum.html
+++ b/lectures/02_scrum.html
@@ -254,7 +254,11 @@ and product owner</li>
 </div>
 <div class="columns">
 <div class="column" width="50%">
+<div class="r-stack">
 <img src="figures/team_intercommunication_5.drawio.svg" width="300" />
+<p><img src="figures/communication_overhead.svg" class="fragment"
+data-fragment-index="1" /></p>
+</div>
 </div>
 <div class="column center-content" width="50%">
 <div class="r-stack">
@@ -284,6 +288,8 @@ and product owner</li>
 what, when, and how</li>
 </ul>
 <h2 id="developers"><a class="header" href="#developers">developers</a></h2>
+<div class="columns">
+<div class="column" width="80%">
 <ul>
 <li>committed to creating any aspect of a usable increment each sprint</li>
 <li>the specific skills needed by the developers are often broad and will
@@ -297,9 +303,14 @@ vary with the domain of work</li>
 </ul>
 </li>
 </ul>
+</div>
+<div class="column" width="20%">
+<p><img src="figures/publicdomainvectors/developer-at-work.svg" alt="" /></p>
+</div>
+</div>
 <h2 id="definition-of-done"><a class="header" href="#definition-of-done">definition of done</a></h2>
 <div class="columns">
-<div class="column" width="50%">
+<div class="column" width="60%">
 <ul>
 <li>checklist</li>
 <li>defines steps to complete the sprint goal</li>
@@ -307,14 +318,13 @@ vary with the domain of work</li>
 <li>the sprint is done, if every element of the checklist is done</li>
 </ul>
 </div>
-<div class="column" width="50%">
-<p>course definition of done:</p>
-<ul>
-<li>☒ attended all classes</li>
-<li>☒ homeworks completed</li>
-<li>☒ midterm exam passed</li>
-<li>☒ project work completed</li>
-</ul>
+<div class="column" width="40%">
+<p><img src="figures/publicdomainvectors/filling-out-the-checklist.svg" alt="" /></p>
+<!--course definition of done:
+&#10;- [x] attended all classes
+- [x] homeworks completed
+- [x] midterm exam passed
+- [x] project work completed-->
 </div>
 </div>
 <h2 id="product-owner"><a class="header" href="#product-owner">product owner</a></h2>
@@ -531,6 +541,8 @@ entering the workflow</p>
 Boogaard</a>.</p>
 </div>
 <h1 id="sprint-planning"><a class="header" href="#sprint-planning">sprint planning</a></h1>
+<div class="columns">
+<div class="column" width="80%">
 <ul>
 <li>sprint planning initiates the sprint</li>
 <li>collaborative work of the entire scrum team</li>
@@ -544,6 +556,11 @@ goal</li>
 </ul>
 </li>
 </ul>
+</div>
+<div class="column" width="20%">
+<p><img src="figures/publicdomainvectors/tasks-on-the-dashboard.svg" alt="" /></p>
+</div>
+</div>
 <h2 id="topics-of-sprint-planning---why-is-this-sprint-valuable"><a class="header" href="#topics-of-sprint-planning---why-is-this-sprint-valuable">topics of sprint planning - why is this sprint valuable?</a></h2>
 <ul>
 <li>the product owner proposes how the product could increase its value
@@ -816,6 +833,8 @@ might be true.</p>
 defining product backlog items into smaller more precise items.</p>
 </blockquote>
 <h2 id="sprint-backlog"><a class="header" href="#sprint-backlog">sprint backlog</a></h2>
+<div class="columns">
+<div class="column" width="70%">
 <ul>
 <li>composed of the sprint goal (why),</li>
 <li>the set of product backlog items selected for the sprint (what),</li>
@@ -826,6 +845,11 @@ defining product backlog items into smaller more precise items.</p>
 </li>
 <li>visible, real-time snapshot of the sprint progress</li>
 </ul>
+</div>
+<div class="column" width="30%">
+<p><img src="figures/publicdomainvectors/scrum-board.svg" alt="" /></p>
+</div>
+</div>
 <div class="notes">
 <p>The sprint goal is created during the sprint planning event and then
 added to the sprint backlog. If the work turns out to be different than
@@ -834,7 +858,7 @@ negotiate the scope of the sprint backlog within the sprint without
 affecting the sprint goal.</p>
 </div>
 <div class="columns">
-<div class="column" width="60%">
+<div class="column" width="70%">
 <ul>
 <li>if the work may turn out different than expected
 <ul>
@@ -845,7 +869,7 @@ affecting the sprint goal.</p>
 affecting the sprint goal</li>
 </ul>
 </div>
-<div class="column" width="40%">
+<div class="column" width="30%">
 <p><img src="figures/publicdomainvectors/gardener-watering-with-a-hose.svg" alt="" /></p>
 </div>
 </div>
@@ -887,6 +911,26 @@ scrums meetings</li>
 </div>
 <div class="notes">
 <p>Also known as meta scrum.</p>
+</div>
+<h1 id="zombie-scrum"><a class="header" href="#zombie-scrum">zombie scrum</a></h1>
+<div class="columns">
+<div class="column" width="50%">
+<blockquote>
+<p>Zombie Scrum is Scrum, but without the beating heart of working
+software.</p>
+</blockquote>
+</div>
+<div class="column" width="50%">
+<p><img src="figures/borrowed/zombie_scrum.png" alt="" /></p>
+</div>
+</div>
+<div class="notes">
+<p>At first sight, zombie scrum seems to be a normal scrum. But it lacks a
+beating heart. The Scrum teams do all the Scrum events but a potentially
+releasable increment is rarely the result of a Sprint. The team also
+doesn’t have any intention to improve their situation. Actually, nobody
+cares about this team. The stakeholders have forgotten the existence of
+this team a long time ago.</p>
 </div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs">
