--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -280,9 +280,22 @@
 </tbody>
 </table>
 <h1 id="materials"><a class="header" href="#materials">materials</a></h1>
+<div class="columns">
+<div class="column mt-3" width="60%">
 <ul>
-<li>hangout, presentation website introduction</li>
+<li>available online in two formats
+<ul>
+<li>hangout</li>
+<li>presentation</li>
 </ul>
+</li>
+<li><a href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
+</ul>
+</div>
+<div class="column" width="40%">
+<p><img src="../assets/qr_code.png" alt="" /></p>
+</div>
+</div>
 <h1 id="tools"><a class="header" href="#tools">tools</a></h1>
 <ul>
 <li>diagram drawing:
