--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -365,12 +365,23 @@ class="title-slide slide level1 exclude-header">
 </table>
 </div>
 </section></section>
-<section id="materials" class="title-slide slide level1 exclude"
-data-visibility="hidden">
-<h1 class="exclude" data-visibility="hidden">materials</h1>
+<section id="materials" class="title-slide slide level1 exclude">
+<h1 class="exclude">materials</h1>
+<div class="columns">
+<div class="column mt-3" style="width:60%;">
 <ul>
-<li>hangout, presentation website introduction</li>
+<li>available online in two formats
+<ul>
+<li>hangout</li>
+<li>presentation</li>
+</ul></li>
+<li><a
+href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
 </ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="../assets/qr_code.png" /></p>
+</div>
+</div>
 </section>
 
 <section id="tools" class="title-slide slide level1">
