--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -195,13 +195,13 @@
 |   13 | midterm                           | project demo       |-->
 <h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
 <ol>
-<li><a href="../slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="../slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="slides/01_sdlc.html">software development life cycles</a></li>
 </ol>
 <h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
 <ol>
-<li><a href="../slides/02_previously.html">week 1 summary</a></li>
-<li><a href="../slides/02_scrum.html">scrum</a></li>
+<li><a href="slides/02_previously.html">week 1 summary</a></li>
+<li><a href="slides/02_scrum.html">scrum</a></li>
 </ol>
 
                     </main>
