--- a/print.html
+++ b/print.html
@@ -196,13 +196,13 @@
 |   13 | midterm                           | project demo       |-->
 <h3 id="week-1"><a class="header" href="#week-1">week 1</a></h3>
 <ol>
-<li><a href="lectures/../slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="lectures/../slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="lectures/slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="lectures/slides/01_sdlc.html">software development life cycles</a></li>
 </ol>
 <h3 id="week-2"><a class="header" href="#week-2">week 2</a></h3>
 <ol>
-<li><a href="lectures/../slides/02_previously.html">week 1 summary</a></li>
-<li><a href="lectures/../slides/02_scrum.html">scrum</a></li>
+<li><a href="lectures/slides/02_previously.html">week 1 summary</a></li>
+<li><a href="lectures/slides/02_scrum.html">scrum</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
@@ -308,9 +308,22 @@
 </tbody>
 </table>
 <h1 id="materials"><a class="header" href="#materials">materials</a></h1>
+<div class="columns">
+<div class="column mt-3" width="60%">
 <ul>
-<li>hangout, presentation website introduction</li>
+<li>available online in two formats
+<ul>
+<li>hangout</li>
+<li>presentation</li>
 </ul>
+</li>
+<li><a href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
+</ul>
+</div>
+<div class="column" width="40%">
+<p><img src="lectures/../assets/qr_code.png" alt="" /></p>
+</div>
+</div>
 <h1 id="tools"><a class="header" href="#tools">tools</a></h1>
 <ul>
 <li>diagram drawing:
