--- a/assets/custom_header.html
+++ b/assets/custom_header.html
@@ -1,7 +1,10 @@
-<script src="../assets/reveal_menu/menu.js"></script>
+<!--<script src="../assets/reveal_menu/menu.js"></script>
 <link rel="stylesheet" href="../assets/reveal_menu/menu.css"/>
 
 <script src="../assets/verticator/verticator.js"></script>
-<link rel="stylesheet" href="../assets/verticator/verticator.css"/>
+<link rel="stylesheet" href="../assets/verticator/verticator.css"/>-->
 
-<script src="../assets/highlight_line.js"></script>
+<script src="../assets/reveal-drawer-0.1.2/drawer.js"></script>
+<link rel="stylesheet" href="../assets/reveal-drawer-0.1.2/drawer.css"/>
+
+<!-- <script src="../assets/highlight_line.js"></script> -->
