deploy: 29c1f1f768078a321fa61ba1ebdc2692b7821025

--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -549,6 +549,7 @@ functionalities.</p>
 <h1 id="scum--kanban--scrumban"><a class="header" href="#scum--kanban--scrumban">SCUM + kanban = scrumban</a></h1>
 <ul>
 <li>SCRUM and kanban can coexist</li>
+<li>quite new methodology</li>
 </ul>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 
