--- a/slides/01_sdlc.html
+++ b/slides/01_sdlc.html
@@ -521,6 +521,7 @@ functionalities.</p>
 <h1>SCUM + kanban = scrumban</h1>
 <ul>
 <li>SCRUM and kanban can coexist</li>
+<li>quite new methodology</li>
 </ul>
 </section>
 
