--- a/lectures/03_kanban.html
+++ b/lectures/03_kanban.html
@@ -348,6 +348,53 @@ make these changes</li>
 matter what kind of charts are used as long as they enable a shared
 understanding of the Kanban system’s current health and performance.</p>
 </div>
+<h1 id="toyotas-six-rules-enwiki1239509091"><a class="header" href="#toyotas-six-rules-enwiki1239509091">Toyota’s six rules [@enwiki:1239509091]</a></h1>
+<div class="columns">
+<div class="column" width="70%">
+<ol>
+<li>Each process issues requests (kanban) to its suppliers when it
+consumes its supplies.</li>
+<li>Each process produces according to the quantity and sequence of
+incoming requests.</li>
+<li>No items are made or transported without a request.</li>
+<li>The request associated with an item is always attached to it.</li>
+<li>Processes must not send out defective items, to ensure that the
+finished products will be defect-free.</li>
+<li>Limiting the number of pending requests makes the process more
+sensitive and reveals inefficiencies.</li>
+</ol>
+</div>
+<div class="column" width="30%">
+<figure>
+<img src="figures/080527-F-0000A-001.JPG"
+alt="Kanban card together with the bag of bolts" />
+<figcaption aria-hidden="true">Kanban card together with the bag of
+bolts</figcaption>
+</figure>
+</div>
+</div>
+<h1 id="scrumban"><a class="header" href="#scrumban">scrumban</a></h1>
+<div class="columns">
+<div class="column" width="50%">
+<p>Scrum contributes to scrumban:</p>
+<ul>
+<li>sprints</li>
+<li>daily standups</li>
+<li>retrospectives</li>
+</ul>
+</div>
+<div class="column" width="50%">
+<p>Kanban contributes to scrumban:</p>
+<ul>
+<li>board</li>
+<li>cards</li>
+<li>work-in-progress limits</li>
+</ul>
+</div>
+</div>
+<h1 id="references"><a class="header" href="#references">references</a></h1>
+<div class="refs">
+</div>
 
                     </main>
 
